fix 1px gap in the overview windows label

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -564,6 +564,7 @@ StTooltip StLabel {
     padding: 10px 5px;
     background: rgba(0, 0, 0, 0.8);
     width: 1000px;
+    height: 18px;
 }
 
 .window-close {
